--- a/ScienceWork/MatModel.tex
+++ b/ScienceWork/MatModel.tex
@@ -1677,7 +1677,7 @@ $$\mathfrak{M}_+^{(3, i+1)}(k,r,v) = q_{k,r} (v)\times  \mathfrak{M}_+^{(3,i)}(k
 $$
 x^{n_k} - \prod_{r=1}^{n_k}q_{k,r} (v),
 $$
-и приравнивая его к нулю, находим, что норма всех собственных чисел одинакова и равна $\left(\prod_{r=1}^{n_k}q_{k,r} (v)\right)^{1/n_k}$. В точке $v=1$ модуль собственных чисел $|\left(\prod_{r=1}^{n_k}q_{k,r} (v)\right)^{1/n_k}|$ равен $1$, а их производная
+и приравнивая его к нулю, находим, что норма всех собственных чисел одинакова и равна $\left(\prod_{r=1}^{n_k}q_{k,r} (v)\right)^{1/n_k}$. В точке $v=1$ модуль собственного числа $|\left(\prod_{r=1}^{n_k}q_{k,r} (v)\right)^{1/n_k}|$ равен $1$, а его производная
 \begin{equation*}
 \left(\frac{1}{n_k} \left.\left(\prod_{r=1}^{n_k}q_{k,r} (v)\right)^{1/n_k - 1} \times \left(\prod_{r=1}^{n_k}q_{k,r}(v)\right) '  \right)\right|_{v=1}=\frac{1}{n_k} \left(\lambda_3 f_3'(1) \sum_{r=1}^{n_k} T^{(k,r)} -\sum_{r=1}^{n_k} \ell(k,r,3)\right),
 \end{equation*}
